# Astrology-brigusamhita

./: .gitignore  README.md  pom.xml  pyproject.toml  requirements-swiss.txt  requirements.txt
app/: __init__.py  main.py  models.py
app/astro/: __init__.py  astronomy.py  chatbot.py  constants.py  dasha.py  engine.py  retrieval.py  rules.py
app/data/: places.json
app/static/: app.js  index.html  styles.css
docs/: java-ai-orchestration.md  model_notes.md
scripts/: smoke_test.py
src/main/java/com/bhrigusamhita/: Json.java  JyotishaApplication.java  PreciseAstronomy.java
tests/: test_smoke.py
