[project]
name = "bhrigu-samhita-jyotisha-lab"
version = "0.1.0"
description = "Local Vedic astrology prediction app using sidereal calculations, Vimshottari dashas, and transparent Bhrigu/Kerala-style rules."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "timezonefinder>=6.5,<8.0"
]

[tool.setuptools]
packages = ["app", "app.astro"]
